[BOD-1089] Increment z-index to avoid PopoverMenu component to beinfront

--- a/src/atoms/CardsTable/CardsTable.scss
+++ b/src/atoms/CardsTable/CardsTable.scss
@@ -29,6 +29,11 @@
       position: sticky;
       top: 60px;
     }
+
+    .cards-table-head {
+      position: relative;
+      z-index: 1;
+    }
   }
 
   .cards-table-header,
